# AiSafety-Assignment

./: 2.1_FedAvg.ipynb  2.2_FedProx.ipynb  2.3-defense.ipynb  2.3_geometricMedianDefense.ipynb  2.4_Median_Aggregation.ipynb  =0.3.0  Baseline_IID_metrics.csv  FedAvg_Baseline_IID_metrics.csv  FedAvg_Baseline_NonIID_metrics.csv  FedAvg_One_Attacker_IID_metrics.csv  FedAvg_One_Attacker_NonIID_metrics.csv  FedAvg_Two_Attackers_IID_metrics.csv  FedAvg_Two_Attackers_NonIID_metrics.csv  FedAvg_combined_metrics.csv  FedProx_Baseline_IID_metrics.csv  FedProx_Baseline_NonIID_metrics.csv  FedProx_Geometric_Median_Defense_Baseline_IID_metrics.csv  FedProx_Geometric_Median_Defense_Baseline_NonIID_metrics.csv  FedProx_Geometric_Median_Defense_One_Attacker_IID_metrics.csv  FedProx_Geometric_Median_Defense_One_Attacker_NonIID_metrics.csv  FedProx_Geometric_Median_Defense_Two_Attackers_IID_metrics.csv  FedProx_Geometric_Median_Defense_Two_Attackers_NonIID_metrics.csv  FedProx_Geometric_Median_Defense_combined_metrics.csv  FedProx_Median_Aggregation_Defense_Baseline_IID_metrics.csv  FedProx_Median_Aggregation_Defense_Baseline_NonIID_metrics.csv  FedProx_Median_Aggregation_Defense_One_Attacker_IID_metrics.csv  FedProx_Median_Aggregation_Defense_One_Attacker_NonIID_metrics.csv  FedProx_Median_Aggregation_Defense_Two_Attackers_IID_metrics.csv  FedProx_Median_Aggregation_Defense_Two_Attackers_NonIID_metrics.csv  FedProx_Median_Aggregation_Defense_combined_metrics.csv  FedProx_One_Attacker_IID_metrics.csv  FedProx_One_Attacker_NonIID_metrics.csv  FedProx_Two_Attackers_IID_metrics.csv  P.ipynb  (+15 more)
(+6 files in other folders)
